# cve-2023-31355-poc

./: Cargo.toml  README.md
linux-patches/: 0001-don-t-fail-if-some-memory-isn-t-covered-by-the-RMP.patch  0002-don-t-mark-0-as-hypervisor-fixed.patch  0003-always-use-address-0-for-guest-context-pages.patch  0004-add-definitions-for-the-ring-buffer-command.patch  0005-implement-attack-code.patch  0006-log-leak-locations-of-secret-pages.patch  0007-add-ioctl-for-decrypting-pfns.patch
src/: kvm.rs  main.rs  snp_types.rs
src/snp_types/: guest_policy.rs  secrets.rs
