[package]
name = "mushroom"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
bit_field = "0.10.1"
bitflags = "1.3.2"
bytemuck = { git = "https://github.com/Freax13/bytemuck.git", rev = "e63ffe8d10129a70a28fcad2bf656782bec8d4bb", features = ["derive", "min_const_generics", "extern_crate_std"] }
clap = { version = "4.4.8", features = ["derive"] }
libc = "0.2.146"
nix = "0.26.1"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
x86_64 = { git = "https://github.com/rust-osdev/x86_64", rev = "bae6119533f19cd5c3557d5a302524f1d72456c5", default-features = false }
